Newer exported gdml files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 BL3_export_onshape_tx.gdml filter=lfs diff=lfs merge=lfs -text
 BL3_export_onshape_dedupe_mradsim_2021-04-01.gdml filter=lfs diff=lfs merge=lfs -text
 BL3_export_onshape_mradsim_2021-04-01.gdml filter=lfs diff=lfs merge=lfs -text
+BL3_export_onshape_mradsim_2021-04-06.gdml filter=lfs diff=lfs merge=lfs -text
+BL3_export_onshape_dedupe_mradsim_2021-04-06.gdml filter=lfs diff=lfs merge=lfs -text
